--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -33,6 +33,13 @@
     </div>
   </div>
 
+  <div class="form-group row">
+    <%= label_tag :groups, t('Notifications for') , class:"col-sm-3 col-form-label" %>
+    <div class="col-sm-9">
+      <%= select_tag :groups, options_from_collection_for_select(Group.all, "id", "name"), { :multiple => true, class: 'custom-select'} %>
+    </div>
+  </div>
+
   <div class="actions">
     <%= f.submit t("Post"), class: 'btn btn-primary'%>
   </div>
