--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -17,6 +17,8 @@
       <!-- Copyright -->
       <div class="footer-copyright col-sm-4 text-center py-3">
         © <%= Time.current.year %> Copyright: Dan Gutu
+<!--        <p style="text-align: center"> in colboration with Sparktech Software</p>-->
+        <p style="text-align: center; margin-bottom: 0">in colboration with <%= image_tag 'logo_spark.png', alt: 'S.C. Sparktech Software S.R.L.', style: 'height: 12px;' %> </p>
       </div>
       <!-- Copyright -->
       <div class="col-sm-4">
