--- a/app/views/user_mailer/child_account_confirmation.text.erb
+++ b/app/views/user_mailer/child_account_confirmation.text.erb
@@ -1,5 +1,5 @@
-Hi <%= @user.full_name %>,
+<%= t('Hello') + ' ' + @user.full_name %>,
 
-Your child's account was successfully reviewed by an administrator. You can manage it from your own account:
+<%= t("Your child's account was successfully reviewed by an administrator You can manage it from your own account") %>
 
-<%= new_user_session_url %>
+<%= new_user_session_url(locale: I18n.locale) %>
