--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,5 @@
-<p>Welcome <%= @resource.full_name %>!</p>
+<p><%= t('Welcome') + ' ' + @resource.full_name %>!</p>
 
-<p>You can confirm your account email through the link below:</p>
+<p><%= t('You can confirm your account email through the link below') %>:</p>
 
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+<p><%= link_to t('Confirm my account'), confirmation_url(@resource, confirmation_token: @token, locale: I18n.locale) %></p>
