--- a/app/views/user_mailer/child_account_confirmation.html.erb
+++ b/app/views/user_mailer/child_account_confirmation.html.erb
@@ -1,9 +1,9 @@
 <h1>ISCEO</h1>
 
-<p>Hi <%= @user.full_name %>,</p>
+<p><%= t('Hello') + ' ' + @user.full_name %>,</p>
 
 <p>
-  Your child's account was successfully reviewed by an administrator. You can manage it from your own account:
+  <%= t("Your child's account was successfully reviewed by an administrator You can manage it from your own account") %>
 </p>
 
-<%= link_to "Log in", new_user_session_url %>
+<%= link_to "Log in", new_user_session_url(locale: I18n.locale) %>
