--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -47,7 +47,7 @@
     <div class="col-sm-9">
       <%= f.date_select :expiration_date, {order: [:day, :month, :year],
                                          prompt: { day: t('Select day'), month: t('Select month'), year: t('Select year') },
-                                         start_year: Date.today.year - 5, end_year: Date.today.year - 100}, class: 'custom-select col-sm-3' %>
+                                         start_year: Date.today.year, end_year: Date.today.year + 10}, class: 'custom-select col-sm-3' %>
     </div>
   </div>
 
