--- a/app/views/shared/_timetable.html.erb
+++ b/app/views/shared/_timetable.html.erb
@@ -24,44 +24,47 @@
     <% else %>
       <tr>
     <% end %>
-      <th scope="row"><%= t(:"date.day_names")[i + 1].capitalize %></th>
-      <% vacation_kind = Vacation.is_vacation(date) %>
-      <% current_time = 8 * 60 %>
-      <% while index < max_index && i + 1 == timetable[index].start_date_time.wday %>
-        <% if !vacation_kind or !vacation_kind.include?(Group.find(timetable[index].group_id).kind) %>
+    <th scope="row"><%= t(:"date.day_names")[i + 1].capitalize %></th>
+    <% vacation_kind = Vacation.is_vacation(date) %>
+    <% current_time = 8 * 60 %>
+    <% while index < max_index && i + 1 == timetable[index].start_date_time.wday %>
+      <% if !vacation_kind || !vacation_kind.include?(Group.find(timetable[index].group_id).kind) %>
+        <% if (Group.find(timetable[index].group_id).expiration_date == nil) || (Group.find(timetable[index].group_id).expiration_date && !(timetable[index].start_date_time > Group.find(timetable[index].group_id).expiration_date)) %>
           <% start_time = timetable[index].start_date_time.hour * 60 + timetable[index].start_date_time.min - 1 %>
           <% end_time = timetable[index].end_date_time.hour * 60 + timetable[index].end_date_time.min + 1 %>
           <% if (start_time - current_time) / 15 != 0 %>
-          <td colspan="<%=  (start_time - current_time) / 15  %>"></td>
-          <%  end %>
-          <%  if (end_time - start_time) / 15 != 0 %>
-          <% if timetable[index].name %>
-            <% name = timetable[index].name + ': '%>
-          <% else %>
-            <% name = '' %>
+            <td colspan="<%= (start_time - current_time) / 15 %>"></td>
           <% end %>
-          <% tooltip = "#{name}#{(timetable[index].start_date_time - 1.minute).strftime("%H:%M")} - #{(timetable[index].end_date_time + 1.minute).strftime("%H:%M")}" %>
-          <td colspan="<%= (end_time - start_time) / 15 %>" title="<%= tooltip %>" style="cursor:pointer; background-color: <%= if user == -1
-                                                                                                                                  '#353535'
-                                                                                                                                else
-                                                                                                                                  Relationship.find_by(group_id: timetable[index].group_id, user_id: user).color
-                                                                                                                                end %>" <% if user == -1 %>
-                                                                                                                                            onclick="show_lesson_delete('<%= "lesson#{index}" %>')"
-                                                                                                                                        <% end %>>
-            <% if user == -1 %>
-              <div id="<%= "lesson#{index}" %>" class="lesson_delete">
-                <%= link_to t("Delete lesson"), timetable[index].lesson, method: :delete, data: {confirm: t("Are you sure you want to delete this lesson?")}, class: "btn btn-danger col-sm-2" %>
-              </div>
+          <% if (end_time - start_time) / 15 != 0 %>
+            <% if timetable[index].name %>
+              <% name = timetable[index].name + ': ' %>
+            <% else %>
+              <% name = '' %>
             <% end %>
-          </td>
-          <%  end  %>
-          <%  current_time = end_time  %>
+            <% tooltip = "#{name}#{(timetable[index].start_date_time - 1.minute).strftime("%H:%M")} - #{(timetable[index].end_date_time + 1.minute).strftime("%H:%M")}" %>
+            <td colspan="<%= (end_time - start_time) / 15 %>" title="<%= tooltip %>" style="cursor:pointer; background-color: <%= if user == -1
+                                                                                                                                    '#353535'
+                                                                                                                                  else
+                                                                                                                                    Relationship.find_by(group_id: timetable[index].group_id, user_id: user).color
+                                                                                                                                  end %>"
+                <% if user == -1 %>
+                onclick="show_lesson_delete('<%= "lesson#{index}" %>')"
+                <% end %>>
+              <% if user == -1 %>
+                <div id="<%= "lesson#{index}" %>" class="lesson_delete">
+                  <%= link_to t("Delete lesson"), timetable[index].lesson, method: :delete, data: {confirm: t("Are you sure you want to delete this lesson?")}, class: "btn btn-danger col-sm-2" %>
+                </div>
+              <% end %>
+            </td>
+          <% end %>
+          <% current_time = end_time %>
         <% end %>
-        <%  index += 1  %>
+        <% index += 1 %>
       <% end %>
-      <% if (21 * 60 - current_time) / 15 != 0 %>
-        <td colspan="<%= (21 * 60 - current_time) / 15 %>"></td>
-      <% end %>
+    <% end %>
+    <% if (21 * 60 - current_time) / 15 != 0 %>
+      <td colspan="<%= (21 * 60 - current_time) / 15 %>"></td>
+    <% end %>
     </tr>
   <% end %>
   </tbody>
