Child notifications fix

--- a/app/views/children/new_full.html.erb
+++ b/app/views/children/new_full.html.erb
@@ -39,7 +39,7 @@
   <div class="form-group row">
     <div class="col-sm-3">
       <%= label_tag :current_password, t("Parent's password"), class:"col-form-label" %><br>
-      <i>(<%= t('we need your current password to confirm your changes') %></i>
+      <i>(<%= t('we need your current password to confirm your changes') %>)</i>
     </div>
     <div class="col-sm-9">
       <%= password_field_tag :current_password, '', class: 'form-control', placeholder: t("Parent's password") %>
